--- a/CONTACT.html
+++ b/CONTACT.html
@@ -6,7 +6,7 @@
 
 <body>
 	<div class="topnav">
-  <a href="UTAMA.html">Home</a>
+  <a href="INDEX.html">Home</a>
   <a href="CONTACT.html">Contact</a>
 </div>
 	<br>
