--- a/UTAMA.html
+++ b/UTAMA.html
@@ -7,7 +7,7 @@
 
 <body>
 	<div class="topnav">
-  <a href="index.html">Home</a>
+  <a href="UTAMA.html">Home</a>
   <a href="CONTACT.html">Contact</a>
 </div>
 	<div class="hero-image">
